--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "immutability-helper": "^3.1.1",
+    "lodash": "^4.17.21",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
