--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "normalizr": "^3.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.0",
+    "reselect": "^4.1.8",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
